<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonTrigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonSimple" />

        <Button
            android:id="@+id/buttonDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonDelay" />

        <Button
            android:id="@+id/buttonHold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonHold" />

        <Button
            android:id="@+id/buttonBulb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonBulb" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxExposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCheckBoxExposure" />

    <TextView
        android:id="@+id/textViewLabelExposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTextViewExposure" />

    <TextView
        android:id="@+id/textViewExposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000" />

    <SeekBar
        android:id="@+id/seekBarExposureTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewLabelDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewLabelDelay" />

    <TextView
        android:id="@+id/textViewDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000" />

    <SeekBar
        android:id="@+id/seekBarDelayTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelTimeOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTimeOpen" />

        <TextView
            android:id="@+id/textViewTimeOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelRemainingExposure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTimeRemaining" />

        <TextView
            android:id="@+id/textViewRemainingExposure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Countdown Delay" />

    <ProgressBar
        android:id="@+id/progressBarDelay"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Countdown Exposure" />

    <ProgressBar
        android:id="@+id/progressBarExposure"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>